# miscCrypt

./: .gitignore  CMakeLists.txt  LICENSE  README.md
Argon2/: argon2-core.cpp  argon2-core.h  argon2-opt-core.cpp  argon2-ref-core.cpp  argon2.cpp  argon2.h  kat.h
Blake2/: blake2-impl.h  blake2.h  blake2b.cpp  blamka-round-opt.h  blamka-round-ref.h
ciphers/: DCP_blockcipher.cpp  DCP_blockcipher.h  DCP_blockcipher128.cpp  DCP_blockcipher128.h  DCP_blockcipher64.cpp  DCP_blockcipher64.h  DCP_cipher.cpp  DCP_cipher.h  DCPc_blowfish.cpp  DCPc_blowfish.h  DCPc_blowfish_tabs.h  DCPc_rijndael.cpp  DCPc_rijndael.h  DCPc_serpent.cpp  DCPc_serpent.h  DCPc_twofish.cpp  DCPc_twofish.h  DCPc_twofish_tabs.h
hashes/: DCP_hash.h  DCPh_haval.cpp  DCPh_haval.h  DCPh_havalPas3.h  DCPh_havalPas4.h  DCPh_havalPas5.h  DCPh_md4.cpp  DCPh_md4.h  DCPh_md5.cpp  DCPh_md5.h  DCPh_ripemd128.cpp  DCPh_ripemd128.h  DCPh_ripemd160.cpp  DCPh_ripemd160.h  DCPh_sha1_160.cpp  DCPh_sha1_160.h  DCPh_sha2_256.cpp  DCPh_sha2_256.h  DCPh_sha3.cpp  DCPh_sha3.h  blake2b-kat.h  blake2s-kat.h
test/: CMakeLists.txt  main.cpp
test/Argon2/: CMakeLists.txt  main.cpp
test/bench/: CMakeLists.txt  main.cpp
util/: Base64.cpp  Base64.h  DCP_const.h  Exception.h  Util.cpp  Util.h
vectors/: Blowfish.txt  Rijndael.txt  SHA.txt  Serpent-192-128.verified.txt  Serpent-256-128.verified.txt  Twofish.intermed.txt
